# invoice_generator

./: README.md  main.cpp  main.py  meson.build
include/gui/: dialogs.h  main_window.h  menu_bar.h
src/config/: settings.py
src/database/: database_manager.py  schema.sql
src/gui/: dialogs.cpp  dialogs.py  gui.py  main_window.cpp  main_window.py  menu_bar.cpp
tests/: test_database_manager.py
